--- a/Site/style.css
+++ b/Site/style.css
@@ -365,3 +365,313 @@ body {
     font-size: 24px;
     margin-left: 20px;
 }
+
+.menu {
+    padding-bottom: 100px;
+}
+
+.donat-title {
+    font-size: 54px;
+    padding-top: 98px;
+    text-align: center;
+    padding-bottom: 138px;
+}
+
+.donat-text {
+    color: black;
+    font-size: 26px;
+    padding-top: 16px;
+    padding-bottom: 17px;
+}
+
+.donat-subtext {
+    color: black;
+    font-size: 17px;
+}
+
+.donat-item {
+    background-color: white;
+    text-align: center;
+    width: 20%;
+    padding-top: 88px;
+    padding-bottom: 30px;
+    margin-right: 20px;
+}
+
+.donat-btn {
+    background-color: orange;
+    text-decoration: none;
+    padding: 14px 67px;
+    font-size: 16px;
+    border-radius: 20px;
+    color: white;
+    box-shadow: 5px 5px 10px 0px #00000040;
+}
+
+.donat-button {
+    margin-top: 20px;
+}
+
+.price-image {
+    position: absolute;
+    bottom: 0;
+    right: 32px;
+}
+
+.donat-image {
+    position: relative;
+}
+
+.price-60 {
+    position: absolute;
+    bottom: 30px;
+    right: 64px;
+    font-size: 30px;
+}
+
+.price-100 {
+    position: absolute;
+    bottom: 30px;
+    right: 59px;
+    font-size: 30px;
+}
+
+.price-250 {
+    position: absolute;
+    bottom: 30px;
+    right: 57px;
+    font-size: 30px;
+}
+
+.donat-items {
+    display: flex;
+    justify-content: center;
+}
+
+.recomended {
+    font-size: 20px;
+    padding: 5px 10px;
+    color: black;
+    background-color: orange;
+    position: absolute;
+    top: -88px;
+    right: 193px;
+}
+
+.coment-img {
+    border-radius: 200px;
+}
+
+.coment {
+    background-color: rgb(27, 27, 27);
+    padding-top: 104px;
+    padding-bottom: 139px;
+}
+
+.coment-text {
+    text-align: center;
+    font-style: italic;
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+.coment-image {
+    text-align: center;
+}
+
+.coment-type {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 9px;
+}
+
+.coment-name {
+    text-align: center;
+    font-size: 18px;
+}
+
+.admins-title {
+    font-size: 54px;
+    text-align: center;
+    margin-bottom: 100px;
+    margin-top: 100px;
+}
+
+.admins-title span {
+    color: orange;
+}
+
+.admins-content{
+    display: flex;
+    justify-content: space-around;
+}
+
+.urls {
+    margin-top: 100px;
+    padding-left: 20px;
+}
+
+.urls2 {
+    margin-top: 20px;
+    padding-left: 20px;
+}
+
+.urlstext {
+    text-decoration: none;
+    color: white;
+}
+
+.urlstext2 {
+    text-decoration: none;
+    color: white;
+}
+
+.donat-menu {
+    display: none;
+}
+
+
+.block {
+    display: block;
+}
+
+
+.donat-slide {
+    position: absolute;
+    display: none;
+}
+
+button {
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+@media (max-width: 1300px) {
+
+    .donat-items {
+        display: block;
+    }
+
+    .donat-item {
+        margin: 20px auto;
+        width: 600px;
+    }
+
+    .recomended {
+        top: -88px;
+        right: 440px;
+    }
+
+    .header-suptitle::before,
+    .header-suptitle::after {
+        content: none;
+    }
+
+    .admins-content {
+        display: block;
+    }
+    
+    .admins-content img {
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 38px;
+    }
+
+    .block-holder{
+        display: block;
+    }
+
+    .black-block {
+        width: 100%;
+        height: 100%;
+    }
+
+    .left-title,
+    .left-text,
+    .right-button {
+        text-align: center;
+    }
+
+
+    .history-images{
+        display: none;
+    }
+
+    .history-title,
+    .history-desc,
+    .history-number{
+        width: auto;
+    }
+    
+    .line2{
+        width: 100%;
+        height: 100%;
+    }
+
+}
+
+@media (max-width: 1185px) {
+
+    .donat-menu{
+        display: block;
+    }
+
+    .mainmenu,
+    .gmail,
+    .btn,
+    .line1 {
+        display: none;
+    }
+
+    .header-line {
+        justify-content: space-between;
+    }
+
+    .delta-image {
+        display: none;
+    }
+}
+
+@media (max-width: 1000px) {
+    
+    .cards-holder{
+        display: block;
+    }
+
+    .card {
+        width: 50%;
+        margin-top: 160px;
+        padding-top: 1px;
+        margin-left: 220px;
+    }
+
+    .left-text span {
+        color: orange;
+    }
+}
+
+@media (max-width: 780px) {
+    .history-holder {
+        display: block;
+    }
+
+    .donat-item {
+        width: auto;
+    }
+
+    .recomended{
+        top: -88px;
+        right: 476px;
+    }
+
+    .container {
+        margin: auto 40px;
+    }
+
+    .black-block{
+        background-image: none;
+        text-align: center;
+    }
+}
